<resources>
    <string name="app_name">RebuNU</string>

    <!-- Button related -->
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="finish">FINISH</string>
    <string name="post_request">POST REQUEST</string>
    <string name="tips">TIPS</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="pay_your_trip">PAY YOUR TRIP</string>
    <string name="search_nearby">SEARCH NEARBY</string>

    <!-- Image Description -->
    <string name="logo_description">This is the logo of RebuNe.</string>

    <!-- Greetings -->
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="where_to_go">WHERE TO GO?</string>
    <string name="ready_to_go">READY TO GO</string>

    <!-- Sign Up Form -->
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="rider">RIDER</string>
    <string name="driver">DRIVER</string>
    <string name="user_select">I AM A</string>

    <!-- Login Form -->
    <string name="email_or_phone">EMAIL / PHONE</string>
    <string name="forget_password">FORGET MY PASSWORD?</string>

    <!-- User Information (This is temporarily used for ui only. Information should be updated based on different users.) -->
    <string name="user_name">USERNAME</string>
    <string name="user_email">USERNAME@REBUNU.COM</string>
    <string name="user_phone">REB-UNU-2020</string>
    <string name="user_balance_numeric">2020</string>
    <!-- Update is not needed for the followings -->
    <string name="user_balance_qr">QRs</string>
    <string name="user_balance">BALANCE</string>
    <string name="user_role">ROLE</string> <!-- Update is not needed -->
    <string name="user_role_rider">RIDER</string>
    <string name="user_role_driver">DRIVER</string>

    <!-- Driver Information (This is temporarily used for ui only. Information should be updated based on different drivers.) -->
    <string name="driver_name">Driver\'s Name</string>
    <string name="driver_like">2020</string>
    <string name="driver_dislike">14</string>
    <string name="driver_phone">780–2020-C301</string>
    <string name="driver_email">DRIVER@REBUNU.COM</string>



    <!-- Rider: Post Request -->
    <string name="from">FROM WHERE</string>
    <string name="to">TO</string>
    <string name="estimated_rate">ESTIMATED RATE</string>
    <string name="estimated_rate_numeric">20.20</string>
    <string name="searching">SEARCHING</string>
    <string name="cancel">CANCEL</string>
    <string name="contact">CONTACT</string>
    <string name="START">8888 Rebunu Avenue, Edmonton</string>
    <string name="END">University of Alberta</string>
    <string name="cancel_request">CANCEL REQUEST</string>

    <!-- Rider: Rating -->
    <string name="awesome">AWESOME!</string>
    <string name="need_to_improve">NEED TO IMPROVE</string>

    <!-- Driver: Search Request -->
    <string name="confirming">CONFIRMING</string>>

    <!-- Error -->
    <string name="password_or_email_or_phone_wrong">WRONG EMAIL/PHONE/PASSWORD</string>
    <string name="password_empty">PASSWORD CANNOT BE EMPTY</string>
    <string name="password_wrong">WRONG PASSWORD</string>
    <string name="email_or_phone_empty">EMAIL/PHONE CANNOT BE EMPTY</string>
    <string name="email_or_phone_wrong">WRONG EMAIL/PHONE</string>
    <string name="title_activity_maps">Map</string>
    <string name="username_empty">USERNAME CANNOT BE EMPTY""</string>
    <string name="phone_empty">PHONE CANNOT BE EMPTY""</string>
    <string name="email_empty">EMAIL CANNOT BE EMPTY""</string>
    <string name="confirmPassword_empty">CONFIRM PASSWORD CANNOT BE EMPTY""</string>
    <string name="two_password_not_match">TWO PASSWORDS ARE NOT MATCH""</string>
    <string name="not_select_role">SELECT YOUR ROLE""</string>
    <string name="invalid_input">INVALID INPUT""</string>
    <string name="invalid_email_address">INVALID EMAIL ADDRESS""</string>
    <string name="email_address_exists">EMAIL ADDRESS ALREADY EXISTS""</string>
    <string name="phone_exists">PHONE ALREADY EXISTS""</string>

    <!-- Google Maps API Key -->
    <string name="google_maps_key">AIzaSyCPFD2nnvGCAY8JeAeng3RLail2nCfeWHg</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="drawerOpen" />
    <string name="drawerClose" />
    <string name="profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="order_history">Order History</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>

</resources>
