<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background_dark"
    tools:context=".UserInformationActivity">

    <Button
        android:id="@+id/userInformation_button_return"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_goback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="430dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/userInformation_edittext_username_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/user_name"
            android:textColor="@color/rebunu_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userInformation_textview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/name"
            android:textColor="@color/rebunu_grey"
            android:textSize="12sp"
            android:textStyle="bold" />

<!--        <Space-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="12dp" />-->

        <EditText
            android:id="@+id/userInformation_edittext_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/user_email"
            android:textColor="@color/rebunu_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userInformation_textview_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/email"
            android:textColor="@color/rebunu_grey"
            android:textSize="12sp"
            android:textStyle="bold" />

<!--        <Space-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="12dp" />-->

        <EditText
            android:id="@+id/userInformation_edittext_userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/user_phone"
            android:textColor="@color/rebunu_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userInformation_textview_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/phone"
            android:textColor="@color/rebunu_grey"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/userInformation_textview_userRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/rider"
            android:textColor="@color/rebunu_green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userInformation_textview_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yahei"
            android:text="@string/user_role"
            android:textColor="@color/rebunu_grey"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userInforamtion_textview_userBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yahei"
                android:text="@string/user_balance_numeric"
                android:textColor="@color/rebunu_green"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/userInformation_textview_qrUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/yahei"
                android:text="@string/user_balance_qr"
                android:textColor="@color/rebunu_green"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/userInformation_textview_balance"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_weight="1"
            android:fontFamily="@font/yahei"
            android:text="@string/user_balance"
            android:textColor="@color/rebunu_grey"
            android:textSize="12sp"
            android:textStyle="bold" />

<!--        <Button-->
<!--            android:id="@+id/userInformation_button_setting"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginStart="32dp"-->
<!--            android:background="@drawable/setting_icon" />-->
        <Button
            android:id="@+id/userInformation_button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_weight="1"
            android:background="@drawable/button_tips"
            android:fontFamily="@font/yahei"
            android:text="@string/apply"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/userInformation_textview_username_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/yahei"
        android:text="@string/user_name"
        android:textColor="@color/background_dark"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userInformation_textview_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/yahei"
        android:text="@string/welcome_back"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userInformation_textview_username_large"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>