<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/screen_background_dark"
tools:context=".SignUpActivity">

<Button
    android:id="@+id/signup_button_return"
    android:layout_width="35dp"
    android:layout_height="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="40dp"
    android:background="@drawable/button_goback"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ScrollView
    android:layout_width="280dp"
    android:layout_height="430dp"
    android:layout_marginTop="250dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.496">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="@color/rebunu_green"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/rebunu_green" />

        <TextView
            android:id="@+id/signup_textview_name"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/yahei"
            android:text="@string/name"
            android:textColor="@color/rebunu_green"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signup_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/rebunu_green"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/rebunu_green" />

        <TextView
            android:id="@+id/signup_textview_email"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/yahei"
            android:text="@string/email"
            android:textColor="@color/rebunu_green"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signup_edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/rebunu_green"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/rebunu_green" />

        <TextView
            android:id="@+id/signup_textview_phone"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:fontFamily="@font/yahei"
            android:text="@string/phone"
            android:textColor="@color/rebunu_green"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signup_edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/rebunu_green"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/rebunu_green" />

        <TextView
            android:id="@+id/signup_textview_password"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:fontFamily="@font/yahei"
            android:text="@string/password"
            android:textColor="@color/rebunu_green"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/signup_edittext_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/rebunu_green"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/signup_textview_confirmpassword"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_weight="1"
            android:fontFamily="@font/yahei"
            android:text="@string/confirm_password"
            android:textColor="@color/rebunu_green"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/yahei"
                android:text="@string/user_select"
                android:textAlignment="center"
                android:textColor="@color/rebunu_green"
                android:textStyle="bold">

            </TextView>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/signup_radiobutton_rider"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/chip_light"
                    android:shadowColor="@color/rebunu_grey"
                    android:text="@string/rider"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/signup_radiobutton_driver"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/chip_light"
                    android:text="@string/driver"
                    android:textStyle="bold" />
            </RadioGroup>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/signup_button_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_long_green"
            android:text="@string/finish"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1" />

    </LinearLayout>
</ScrollView>

<TextView
    android:id="@+id/signup_textview_signup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp"
    android:layout_marginTop="100dp"
    android:fontFamily="@font/yahei"
    android:text="@string/sign_up"
    android:textColor="@color/background_dark"
    android:textSize="36sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>