<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rider_layout_request_accepted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#D11F241F"
        android:visibility="visible">
        <Button
            android:id="@+id/rider_button_hide_request_accepted"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_hide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="450dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/rider_edittext_from_request_accepted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rebunu_green"
                android:textColor="@color/rebunu_green">

            </EditText>

            <TextView
                android:id="@+id/rider_textview_fromWhere_request_accepted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yahei"
                android:paddingLeft="5dp"
                android:text="@string/from"
                android:textColor="@color/rebunu_green"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <EditText
                android:id="@+id/rider_edittext_to_request_accepted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/rebunu_green"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/rebunu_green" />

            <TextView
                android:id="@+id/rider_textview_to_request_accepted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yahei"
                android:paddingLeft="5dp"
                android:text="@string/to"
                android:textColor="@color/rebunu_green"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rider_textview_estimatedRateNumeric_request_accepted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/estimated_rate_numeric"
                        android:textColor="@color/rebunu_green"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rider_textview_estimatedRate_request_accepted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/yahei"
                        android:text="@string/estimated_rate"
                        android:textColor="@color/rebunu_green"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/rider_button_tips_request_accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_tips"
                    android:fontFamily="@font/yahei"
                    android:text="@string/tips"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rider_imageview_profile_request_accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/driver_profile_sample" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/rider_imageview_like_request_accepted"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/like_icon" />

                        <TextView
                            android:id="@+id/rider_textview_like_request_accepted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/driver_like"
                            android:textColor="@color/rebunu_green"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/rider_imageview_dislike_request_accepted"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/dislike_icon" />

                        <TextView
                            android:id="@+id/rider_textview_dislike_request_accepted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/driver_dislike"
                            android:textColor="@color/rebunu_green"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/rider_textview_name_request_accepted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/yahei"
                        android:text="@string/driver_name"
                        android:textColor="@color/rebunu_green"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rider_button_accept_request_accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_accept_decline"
                    android:fontFamily="@font/yahei"
                    android:text="@string/accept"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/rider_button_decline_request_accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_accept_decline"
                    android:fontFamily="@font/yahei"
                    android:text="@string/decline"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>